--- a/home.html
+++ b/home.html
@@ -28,6 +28,6 @@
 
   <footer>© 2025 Google-style UI — HTML & CSS only</footer>
 
-<script type="module"  src="logout.js"></script>
+<script type="module"  src="./logout.js"></script>
 </body>
 </html>
