--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
       <span>Sign in with Google</span>
     </button>
   </div>
-<script type="module" src="app.js"></script>    
+<script type="module" src="./app.js"></script>    
 </body>
 </html>
